# VkGaussianRenderer

./: .env.cmake  CMakeLists.txt  CMakePresets.json  README.md  compile.bat  vkpkg_rf.txt
shaders/: gaussian_shader.vert  gaussian_shader.vert.spv  preprocess.comp  preprocess.comp.spv  simple_shader.frag  simple_shader.vert  simple_shader.vert.spv
src/: VulkanRenderer.cpp  VulkanRenderer.h  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  descriptors.cpp  descriptors.hpp  first_app.cpp  first_app.hpp  frame_info.hpp  game_object.cpp  game_object.hpp  gaussian_model.cpp  gaussian_model.hpp  imgui_manager.cpp  imgui_manager.hpp  main.cpp  main.h  movement_controller.cpp  movement_controller.hpp  renderer.cpp  renderer.hpp  utils.cpp  utils.hpp  vr_device.cpp  vr_device.hpp  vr_model.cpp  vr_model.hpp  vr_swap_chain.cpp  vr_swap_chain.hpp  vr_window.cpp  vr_window.hpp
src/ImGui/: imconfig.h
src/pipelines/: compute_pipeline.cpp  compute_pipeline.hpp  vr_pipeline.cpp  vr_pipeline.hpp
src/systems/: simple_render.cpp  simple_render.hpp
src/systems/gaussian_render/: gaussian_render.cpp  gaussian_render.hpp
src/systems/simple_render/: simple_render.cpp  simple_render.hpp
